[+] add 4 lab and some fixes

--- a/app/src/main/res/layout/activity_third_lab.xml
+++ b/app/src/main/res/layout/activity_third_lab.xml
@@ -3,16 +3,17 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:orientation="vertical">
 
     <EditText
         android:id="@+id/edit_text_first_name"
         android:layout_width="200dp"
-        android:hint="First name"
+        android:hint="@string/first_name_hint"
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
         android:padding="20dp"
@@ -25,7 +26,7 @@
         android:id="@+id/edit_text_last_name"
         android:layout_width="200dp"
         android:padding="20dp"
-        android:hint="Last name"
+        android:hint="@string/last_name_hint"
         android:inputType="text"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"/>
@@ -34,7 +35,7 @@
     <EditText
         android:id="@+id/edit_text_email"
         android:layout_width="200dp"
-        android:hint="Email"
+        android:hint="@string/email_hint"
         android:layout_height="wrap_content"
         android:inputType="textEmailAddress"
         android:padding="20dp"
@@ -43,7 +44,7 @@
     <EditText
         android:id="@+id/edit_text_phone"
         android:layout_width="200dp"
-        android:hint="Phone"
+        android:hint="@string/phone_hint"
         android:inputType="phone"
         android:layout_height="wrap_content"
         android:padding="20dp"
@@ -52,7 +53,7 @@
     <EditText
         android:id="@+id/edit_text_password"
         android:layout_width="200dp"
-        android:hint="Password"
+        android:hint="@string/password_hint"
         android:inputType="textPassword"
         android:layout_height="wrap_content"
         android:padding="20dp"
@@ -61,7 +62,7 @@
     <EditText
         android:id="@+id/edit_text_confirmation"
         android:layout_width="200dp"
-        android:hint="Password confirmation"
+        android:hint="@string/password_confirmation_hint"
         android:layout_height="wrap_content"
         android:inputType="textPassword"
         android:padding="20dp"
@@ -78,12 +79,24 @@
     <Button
         android:id="@+id/button_submit"
         android:layout_width="200dp"
-        android:text="Submit"
+        android:text="@string/submit"
         android:layout_marginTop="10dp"
         android:textColor="@color/colorWhite"
-        android:layout_height="wrap_content"
+        android:layout_height="50dp"
         android:layout_gravity="center_horizontal"
-        android:background="@drawable/button_background"/>
+        android:foreground="?android:attr/selectableItemBackground"
+        android:background="@drawable/button_selector"/>
+
+    <Button
+        android:id="@+id/button_view_list"
+        android:layout_width="200dp"
+        android:text="@string/view_list"
+        android:layout_marginTop="10dp"
+        android:textColor="@color/colorWhite"
+        android:layout_height="50dp"
+        android:layout_gravity="center_horizontal"
+        android:foreground="?android:attr/selectableItemBackground"
+        android:background="@drawable/button_selector"/>
 
 </LinearLayout>
 </ScrollView>
