--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,61 +1,61 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context=".screens.MainActivity">
+    android:fillViewport="true">
 
-    <EditText
-        android:id="@+id/user_input"
-        android:layout_width="200dp"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"/>
+        android:orientation="vertical"
+        tools:context=".screens.MainActivity">
 
-    <Button
-        android:id="@+id/edit_text_clear"
-        android:background="@drawable/button_background_normal"
-        android:layout_width="200dp"
-        android:layout_height="50dp"
-        android:text="Clear field"
-        android:layout_margin="20dp"
-        android:textColorHighlight="@color/colorPrimaryDark"
-        android:textColor="@color/colorWhite"
-        android:layout_gravity="center_horizontal"/>
+        <EditText
+            android:id="@+id/user_input"
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal" />
 
-    <Button
-        android:id="@+id/edit_text_notify"
-        android:background="@drawable/button_background_normal"
-        android:layout_width="200dp"
-        android:textColor="@color/colorWhite"
-        android:layout_margin="20dp"
-        android:layout_height="50dp"
-        android:text="Make notification"
-        android:textColorHighlight="@color/colorGreen"
-        android:layout_gravity="center_horizontal"/>
+        <Button
+            android:id="@+id/edit_text_clear"
+            android:layout_width="200dp"
+            android:layout_height="50dp"
+            android:layout_gravity="center_horizontal"
+            android:layout_margin="20dp"
+            android:gravity="center"
+            android:background="@drawable/button_background_normal"
+            android:text="Clear field"
+            android:textColor="@color/colorWhite"
+            android:textColorHighlight="@color/colorPrimaryDark" />
 
-    <TextView
-        android:id="@+id/user_text"
-        android:layout_width="200dp"
-        android:layout_height="80dp"
-        android:textColorHighlight="@color/colorPrimaryDark"
-        android:layout_gravity="center_horizontal"/>
+        <Button
+            android:id="@+id/edit_text_notify"
+            android:layout_width="200dp"
+            android:layout_height="50dp"
+            android:layout_gravity="center_horizontal"
+            android:layout_margin="20dp"
+            android:background="@drawable/button_background_normal"
+            android:text="Make notification"
+            android:textColor="@color/colorWhite"
+            android:textColorHighlight="@color/colorGreen" />
+
+        <TextView
+            android:id="@+id/user_text"
+            android:layout_width="200dp"
+            android:layout_height="80dp"
+            android:layout_gravity="center_horizontal"
+            android:textColorHighlight="@color/colorPrimaryDark" />
 
 
-    <Button
-        android:id="@+id/go_to_lab3"
-        android:layout_width="200dp"
-        android:layout_height="wrap_content"
-        android:background="@drawable/button_background_normal"
-        android:textColor="@color/colorWhite"
-        android:layout_gravity="center_horizontal|bottom"
-        android:text="Go to Lab 3"/>
+        <Button
+            android:id="@+id/go_to_lab3"
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal|bottom"
+            android:background="@drawable/button_background_normal"
+            android:text="Go to Lab 3"
+            android:textColor="@color/colorWhite" />
 
-</LinearLayout>
+    </LinearLayout>
 </ScrollView>
