--- a/app/src/main/res/layout/activity_third_lab.xml
+++ b/app/src/main/res/layout/activity_third_lab.xml
@@ -5,10 +5,10 @@
     android:layout_height="match_parent">
 
 <LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:animateLayoutChanges="true">
 
     <EditText
         android:id="@+id/edit_text_first_name"
@@ -19,8 +19,6 @@
         android:padding="20dp"
         android:inputType="text"
         android:layout_gravity="center_horizontal"/>
-
-
 
     <EditText
         android:id="@+id/edit_text_last_name"
@@ -94,6 +92,7 @@
         android:layout_marginTop="10dp"
         android:textColor="@color/colorWhite"
         android:layout_height="50dp"
+        android:textAlignment="center"
         android:layout_gravity="center_horizontal"
         android:foreground="?android:attr/selectableItemBackground"
         android:background="@drawable/button_selector"/>
