--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="colorGreen">#03A9F4</color>
     <color name="colorWhite">#ffffff</color>
     <color name="colorRed">#FF0000</color>
+    <color name="colorGrey">#F5F5F5</color>
 </resources>
