--- a/app/src/main/res/layout/activity_fourth_lab.xml
+++ b/app/src/main/res/layout/activity_fourth_lab.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <android.support.v4.widget.SwipeRefreshLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/swipe_container"
     android:layout_width="match_parent"
+    android:orientation="vertical"
     android:layout_height="match_parent"
     android:background="@color/colorGrey">
 
@@ -12,7 +12,7 @@
         android:layout_width="0dp"
         android:layout_marginTop="20dp"
         android:layout_height="0dp"
-        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
         android:layout_alignParentTop="true" />
 
 </android.support.v4.widget.SwipeRefreshLayout>
