--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,6 +14,7 @@
         <EditText
             android:id="@+id/user_input"
             android:layout_width="200dp"
+            android:visibility="gone"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal" />
 
@@ -26,6 +27,7 @@
             android:gravity="center"
             android:background="@drawable/button_background_normal"
             android:text="Clear field"
+            android:visibility="gone"
             android:textColor="@color/colorWhite"
             android:textColorHighlight="@color/colorPrimaryDark" />
 
@@ -37,6 +39,7 @@
             android:layout_margin="20dp"
             android:background="@drawable/button_background_normal"
             android:text="Make notification"
+            android:visibility="gone"
             android:textColor="@color/colorWhite"
             android:textColorHighlight="@color/colorGreen" />
 
@@ -54,7 +57,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal|bottom"
             android:background="@drawable/button_background_normal"
-            android:text="Go to Lab 3"
+            android:text="Go to dogs list"
             android:textColor="@color/colorWhite" />
 
     </LinearLayout>
