--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="colorWhite">#ffffff</color>
     <color name="colorRed">#FF0000</color>
     <color name="colorGrey">#F5F5F5</color>
+    <color name="colorBlack">#000000</color>
 </resources>
