--- a/app/src/main/res/layout/activity_fourth_lab.xml
+++ b/app/src/main/res/layout/activity_fourth_lab.xml
@@ -1,18 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
+
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
+
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/dogs_toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="70dp"
+        android:background="@color/colorPrimaryDark"
+        app:navigationIcon = "@drawable/ic_favorite_white_24dp">
+
+    </android.support.v7.widget.Toolbar>
+
+
 <android.support.v4.widget.SwipeRefreshLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/swipe_container"
     android:layout_width="match_parent"
     android:orientation="vertical"
+    android:layout_weight="0.2"
     android:layout_height="match_parent"
     android:background="@color/colorGrey">
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/users"
-        android:layout_width="0dp"
-        android:layout_marginTop="20dp"
-        android:layout_height="0dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true" />
+
+<android.support.v7.widget.RecyclerView
+    android:id="@+id/users"
+    android:layout_width="0dp"
+    android:layout_marginTop="20dp"
+    android:layout_height="0dp"
+    android:layout_alignParentStart="true"
+    android:scrollbars="vertical"
+    android:layout_alignParentTop="true" />
+
 
 </android.support.v4.widget.SwipeRefreshLayout>
+</LinearLayout>
