--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,64 +1,60 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fillViewport="true">
+    android:orientation="vertical">
 
-    <LinearLayout
-        android:layout_width="match_parent"
+    <EditText
+        android:id="@+id/user_input"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        tools:context="laboratorywork.screens.MainActivity">
+        android:layout_gravity="center_horizontal"
+        android:layout_weight="0.1"
+        android:visibility="gone" />
 
-        <EditText
-            android:id="@+id/user_input"
-            android:layout_width="200dp"
-            android:visibility="gone"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal" />
+    <Button
+        android:id="@+id/edit_text_clear"
+        android:layout_width="200dp"
+        android:layout_height="50dp"
+        android:layout_gravity="center_horizontal"
+        android:layout_margin="20dp"
+        android:layout_weight="0.1"
+        android:background="@drawable/button_background_normal"
+        android:gravity="center"
+        android:text="Clear field"
+        android:textColor="@color/colorWhite"
+        android:textColorHighlight="@color/colorPrimaryDark"
+        android:visibility="gone" />
 
-        <Button
-            android:id="@+id/edit_text_clear"
-            android:layout_width="200dp"
-            android:layout_height="50dp"
-            android:layout_gravity="center_horizontal"
-            android:layout_margin="20dp"
-            android:gravity="center"
-            android:background="@drawable/button_background_normal"
-            android:text="Clear field"
-            android:visibility="gone"
-            android:textColor="@color/colorWhite"
-            android:textColorHighlight="@color/colorPrimaryDark" />
+    <Button
+        android:id="@+id/edit_text_notify"
+        android:layout_width="200dp"
+        android:layout_height="50dp"
+        android:layout_gravity="center_horizontal"
+        android:layout_margin="20dp"
+        android:layout_weight="0.1"
+        android:background="@drawable/button_background_normal"
+        android:text="Make notification"
+        android:textColor="@color/colorWhite"
+        android:textColorHighlight="@color/colorGreen"
+        android:visibility="gone" />
 
-        <Button
-            android:id="@+id/edit_text_notify"
-            android:layout_width="200dp"
-            android:layout_height="50dp"
-            android:layout_gravity="center_horizontal"
-            android:layout_margin="20dp"
-            android:background="@drawable/button_background_normal"
-            android:text="Make notification"
-            android:visibility="gone"
-            android:textColor="@color/colorWhite"
-            android:textColorHighlight="@color/colorGreen" />
-
-        <TextView
-            android:id="@+id/user_text"
-            android:layout_width="200dp"
-            android:layout_height="80dp"
-            android:layout_gravity="center_horizontal"
-            android:textColorHighlight="@color/colorPrimaryDark" />
+    <TextView
+        android:id="@+id/user_text"
+        android:layout_width="200dp"
+        android:layout_height="80dp"
+        android:layout_gravity="center_horizontal"
+        android:layout_weight="0.1"
+        android:textColorHighlight="@color/colorPrimaryDark" />
 
 
-        <Button
-            android:id="@+id/go_to_lab3"
-            android:layout_width="200dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal|bottom"
-            android:background="@drawable/button_background_normal"
-            android:text="Go to dogs list"
-            android:textColor="@color/colorWhite" />
+    <Button
+        android:id="@+id/go_to_lab3"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:background="@drawable/button_background_normal"
+        android:text="Go to dogs list"
+        android:textColor="@color/colorWhite" />
 
-    </LinearLayout>
-</ScrollView>
+
+</LinearLayout>
