--- a/app/src/main/res/layout/activity_fourth_lab.xml
+++ b/app/src/main/res/layout/activity_fourth_lab.xml
@@ -8,13 +8,12 @@
     android:orientation="vertical">
 
     <android.support.v7.widget.Toolbar
-        android:id="@+id/dogs_toolbar"
+        android:id="@+id/toolbar_dogs"
         android:layout_width="match_parent"
-        android:layout_height="70dp"
+        android:layout_height="?android:attr/actionBarSize"
         android:background="@color/colorPrimaryDark"
-        app:navigationIcon = "@drawable/ic_favorite_white_24dp">
+        app:navigationIcon = "@drawable/ic_favorite_white_24dp"/>
 
-    </android.support.v7.widget.Toolbar>
 
 
 <android.support.v4.widget.SwipeRefreshLayout
@@ -22,13 +21,12 @@
     android:id="@+id/swipe_container"
     android:layout_width="match_parent"
     android:orientation="vertical"
-    android:layout_weight="0.2"
-    android:layout_height="match_parent"
+    android:layout_height="0dp"
     android:background="@color/colorGrey">
 
 
 <android.support.v7.widget.RecyclerView
-    android:id="@+id/users"
+    android:id="@+id/recycler_view_users"
     android:layout_width="0dp"
     android:layout_marginTop="20dp"
     android:layout_height="0dp"
