--- a/app/src/main/res/layout/activity_image_viewer.xml
+++ b/app/src/main/res/layout/activity_image_viewer.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -9,17 +9,15 @@
     android:id="@+id/image_view"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_weight="0.5"
     android:transitionName="transition"/>
 
     <Button
         android:id="@+id/add_to_favourite"
         android:layout_width="match_parent"
-        android:layout_height="150dp"
+        android:layout_height="50dp"
         android:layout_gravity="bottom"
-        android:layout_weight="1"
         android:background="@color/colorGreen"
         android:textColor="@color/colorWhite"
-        android:text="Add to favourite"/>
+        android:text="@string/add_to_favourite"/>
 
-</LinearLayout>
+</FrameLayout>
