--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,60 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout
+   xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <EditText
-        android:id="@+id/user_input"
-        android:layout_width="200dp"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:layout_weight="0.1"
-        android:visibility="gone" />
-
     <Button
-        android:id="@+id/edit_text_clear"
-        android:layout_width="200dp"
-        android:layout_height="50dp"
-        android:layout_gravity="center_horizontal"
-        android:layout_margin="20dp"
-        android:layout_weight="0.1"
-        android:background="@drawable/button_background_normal"
-        android:gravity="center"
-        android:text="Clear field"
-        android:textColor="@color/colorWhite"
-        android:textColorHighlight="@color/colorPrimaryDark"
-        android:visibility="gone" />
-
-    <Button
-        android:id="@+id/edit_text_notify"
-        android:layout_width="200dp"
-        android:layout_height="50dp"
-        android:layout_gravity="center_horizontal"
-        android:layout_margin="20dp"
-        android:layout_weight="0.1"
-        android:background="@drawable/button_background_normal"
-        android:text="Make notification"
-        android:textColor="@color/colorWhite"
-        android:textColorHighlight="@color/colorGreen"
-        android:visibility="gone" />
-
-    <TextView
-        android:id="@+id/user_text"
-        android:layout_width="200dp"
-        android:layout_height="80dp"
-        android:layout_gravity="center_horizontal"
-        android:layout_weight="0.1"
-        android:textColorHighlight="@color/colorPrimaryDark" />
-
-
-    <Button
-        android:id="@+id/go_to_lab3"
+        android:id="@+id/button_go_to_dogs"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:background="@drawable/button_background_normal"
-        android:text="Go to dogs list"
+        android:text="@string/go_to_dogs"
+        android:layout_gravity="bottom"
         android:textColor="@color/colorWhite" />
 
 
-</LinearLayout>
+</FrameLayout>
