--- a/app/src/main/res/layout/activity_fourth_lab.xml
+++ b/app/src/main/res/layout/activity_fourth_lab.xml
@@ -21,7 +21,7 @@
     android:id="@+id/swipe_container"
     android:layout_width="match_parent"
     android:orientation="vertical"
-    android:layout_height="0dp"
+    android:layout_height="match_parent"
     android:background="@color/colorGrey">
 
 
